--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -33,7 +33,7 @@
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
 
-/* === Add by user === */
+/* === Add by xiaoka - start === */
 html,
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans',
@@ -47,3 +47,4 @@ video {
   width: 600px;
   height: 400px;
 }
+/* === Add by xiaoka - end === */
